hcc/tests/conform/errors/parse/unknown_include.hc
//@ error: cannot find #include
#include <stdlib.hh>
#include <no_such_header_xyz.hc>

U0 Main() {}
